<resources>
    <string name="app_name">BTDraw</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Heading -->
    <string name="options">Options</string>
        <!-- Children -->
        <string name="start_new">New</string>
        <string name="save">Save</string>
        <string name="load">Load</string>
        <string name="undo">Undo</string>

    <!-- Heading -->
    <string name="tools">Tools</string>
        <!-- Children -->
        <string name="brush">Brush</string>
        <string name="erase">Erase</string>
        <string name="color_picker">Color Picker</string>
        <string name="line">Line</string>
        <string name="rectangle">Rectangle</string>
        <string name="fill_rectangle">Rectangle Fill</string>
        <string name="oval">Oval</string>
        <string name="fill_oval">Oval Fill</string>
        <string name="paint_bucket">Paint Bucket</string>

    <!-- Heading -->
    <string name="object_size">Object Size</string>
        <!-- Children -->
        <string name="object_small">Small</string>
        <string name="object_medium">Medium</string>
        <string name="object_large">Large</string>

    <!-- Heading -->
    <string name="color">Color</string>
        <!-- Children -->
        <string name="color_red">Red</string>
        <string name="color_orange">Orange</string>
        <string name="color_yellow">Yellow</string>
        <string name="color_green">Green</string>
        <string name="color_blue">Blue</string>
        <string name="color_purple">Purple</string>
        <string name="color_pink">Pink</string>
        <string name="color_white">White</string>
        <string name="color_grey">Grey</string>
        <string name="color_black">Black</string>
        <string name="color_custom">Custom</string>

    <string name="confirm_save">Save Drawing to Device Gallery?</string>
    <string name="confirm_load">Load Drawing from File?</string>
    <string name="confirm_new">Creating a new drawing will clear all current work. Continue?</string>

    <string name="write_external_storage">WRITE_EXTERNAL_STORAGE</string>

    <string name="png">.png</string>
    <string name="custom_drawing">Custom Drawing</string>
    <string name="title">BT Draw</string>
    <string name="source">https://github.com/badgerbaj/BTDraw</string>
</resources>
