<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_items">
    <header value="@string/tools" image="@drawable/ic_brush">
        <item value="@string/brush" image="@drawable/ic_brush" />
        <item value="@string/paint_bucket" image="@drawable/ic_paint_fill" />
        <item value="@string/erase" image="@drawable/ic_erase" />
        <item value="@string/color_picker" image="@drawable/ic_color_picker" />
        <item value="@string/line" image="@drawable/ic_line" />
        <item value="@string/rectangle" image="@drawable/ic_rectangle" />
        <item value="@string/fill_rectangle" image="@drawable/ic_fill_rectangle" />
        <item value="@string/oval" image="@drawable/ic_oval" />
        <item value="@string/fill_oval" image="@drawable/ic_fill_oval" />
    </header>
    <header value="@string/object_size" image="@drawable/ic_object_small">
        <item value="@string/object_small" image="@drawable/ic_object_small" />
        <item value="@string/object_medium" image="@drawable/ic_object_medium" />
        <item value="@string/object_large" image="@drawable/ic_object_large" />
    </header>
    <header value="@string/color" image="@drawable/ic_color_black">
        <item value="@string/color_red" image="@drawable/ic_color_red" color=""/>
        <item value="@string/color_orange" image="@drawable/ic_color_orange" color="0xFFFFA500"/>
        <item value="@string/color_yellow" image="@drawable/ic_color_yellow" color=""/>
        <item value="@string/color_green" image="@drawable/ic_color_green" color=""/>
        <item value="@string/color_blue" image="@drawable/ic_color_blue" color=""/>
        <item value="@string/color_purple" image="@drawable/ic_color_purple" color="0xFF551A8B"/>
        <item value="@string/color_pink" image="@drawable/ic_color_pink" color="0xFFFF69B4"/>
        <item value="@string/color_white" image="@drawable/ic_color_white" color=""/>
        <item value="@string/color_grey" image="@drawable/ic_color_grey" color=""/>
        <item value="@string/color_black" image="@drawable/ic_color_black" color=""/>
    </header>
</menu>